# xe.old

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  xe.kdev4
src/demo/: Application.cpp  Application.hpp  Archive.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  CameraController.cpp  CameraController.hpp  CameraEntity.cpp  CameraEntity.hpp  CameraRenderer.cpp  CameraRenderer.hpp  DemoApp.cpp  DemoApp.hpp  DemoResources.cpp  DemoResources.hpp  Entity.hpp  FrameTimer.cpp  FrameTimer.hpp  GameState.cpp  GameSystem.cpp  GameSystem.hpp  InputSystem.cpp  InputSystem.hpp  Mesh.cpp  Mesh.hpp  MeshRenderer.cpp  MeshRenderer.hpp  Message.cpp  Message.hpp  MessageBus.cpp  MessageBus.hpp  ModelPart.hpp  MoveMessage.hpp  PhongLight.cpp  PhongLight.hpp  PhongLightRenderer.cpp  PhongLightRenderer.hpp  PhongMaterial.cpp  PhongMaterial.hpp  (+15 more)
src/demo/render/: Camera.cpp  Camera.hpp  CameraRenderer.cpp  CameraRenderer.hpp  Mesh.cpp  Mesh.hpp  MeshRenderer.cpp  MeshRenderer.hpp  Model.cpp  PhongLight.hpp  PhongLightRenderer.hpp  PhongMaterial.hpp  PhongPipeline.cpp  PhongPipeline.hpp  Pipeline.hpp  Renderable.cpp  Renderable.hpp  SceneRenderer.cpp  SceneRenderer.hpp
src/demo/system/: CameraEntity.cpp  MessageHandler.cpp  MessageHandler.hpp  MoveMessage.cpp  RenderSystem.cpp  ResourceManager.cpp  ResourceManager.hpp
src/demo/util/: Archive.cpp
src/xe/: CMakeLists.txt  Stream.hpp
src/xe-demo/: CMakeLists.txt  Resources.cpp
src/xe-demo/render/: Mesh.hpp  ModelPart.hpp  PhongPipeline.cpp
src/xe-demo/system/: Entity.cpp  ResourceManager.cpp  System.hpp
src/xe-gfx-fi/: CMakeLists.txt  ImageLoaderFI.cpp  ImageLoaderFI.hpp  PluginFI.cpp
src/xe-gfx-gl33/: CMakeLists.txt
src/xe-gfx-gl33/xe/gfx/gl3/: BufferGL.cpp  FactoryGL.cpp  FactoryGL.hpp  GraphicsDeviceGL.cpp  (+9 more)
src/xe-gfx-png/: CMakeLists.txt  ImageLoaderPNG.cpp  ImagePNG.hpp
src/xe.gfx.d3d10/: CMakeLists.txt
src/xe.gfx.d3d10/xe/gfx/: DeviceD3D10.cpp  DeviceD3D10.hpp  FactoryD3D10.cpp  FactoryD3D10.hpp  PluginD3D10.cpp  PluginD3D10.hpp  ProgramD3D10.cpp  ProgramD3D10.hpp
src/xe.gfx.gl3/: CMakeLists.txt
src/xe.gfx.gles2/: CMakeLists.txt
src/xe.gfx.gles2/xe/gfx/: DeviceGLES2.cpp  DeviceGLES2.hpp  FactoryGLES2.cpp  FactoryGLES2.hpp
src/xe.gfx.png/: CMakeLists.txt  ImageLoaderPNG.hpp  ImagePNG.cpp  PluginPNG.cpp
src/xe.tests/: CMakeLists.txt  Common.cpp  Common.hpp  Main.cpp  TestMatrix.cpp  TestMesh.cpp  TestQuaternion.cpp  TestStructure.cpp  TestVector.cpp
src/xe/xe/: Archive.hpp  Array.hpp  Boundary.hpp  Box.hpp  Buffer.hpp  Common.hpp  Core.cpp  Core.hpp  CoreBase.cpp  CoreBase.hpp  DataFormat.hpp  DataType.hpp  Enum.hpp  FileLocator.cpp  FileLocator.hpp  FileStream.cpp  FileStream.hpp  FileUtil.cpp  FileUtil.hpp  FileUtil.old.cpp  FileUtil.old.hpp  Flags.hpp  Forward.hpp  IosStream.cpp  IosStream.hpp  Library.hpp  LibraryPosix.cpp  LibraryWin.cpp  Math.hpp  Matrix.hpp  MemoryStream.cpp  MemoryStream.hpp  Meta.hpp  Metaprog.hpp  Plugin.cpp  Plugin.hpp  PluginData.cpp  PluginData.hpp  PluginLibrary.cpp  PluginLibrary.hpp  (+22 more)
src/xe/xe/ext/: Scene.hpp  SceneImpl.cpp  SceneImpl.hpp  SceneManager.cpp  SceneManager.hpp  SceneManagerImpl.cpp  SceneManagerImpl.hpp  SceneNode.hpp  SceneNodeImpl.cpp  SceneNodeImpl.hpp
src/xe/xe/game/: Entity.cpp  Entity.hpp  Message.cpp  Message.hpp  MessageBus.cpp  MessageBus.hpp  MessageHandler.cpp  MessageHandler.hpp  System.cpp  System.hpp
src/xe/xe/gfx/: BufferType.cpp  BufferType.hpp  Device.cpp  Device.hpp  DeviceInfo.cpp  DeviceInfo.hpp  Factory.cpp  Factory.hpp  FactoryImpl.cpp  FactoryImpl.hpp  GraphicsDevice.cpp  GraphicsDevice.hpp  GraphicsDeviceInfo.cpp  GraphicsFactory.cpp  GraphicsFactory.hpp  GraphicsFactoryImpl.cpp  GraphicsFactoryImpl.hpp  GraphicsManager.cpp  GraphicsManager.hpp  Image.cpp  Image.hpp  ImageImpl.cpp  ImageImpl.hpp  ImageLoader.cpp  ImageLoader.hpp  Manager.cpp  Manager.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  MeshFormat.cpp  MeshFormat.hpp  PixelFormat.cpp  PixelFormat.hpp  Primitive.hpp  Program.cpp  Program.hpp  ShaderType.hpp  Subset.cpp  (+7 more)
src/xe/xe/input/: Event.hpp  EventHandler.hpp  EventImpl.hpp  InputCode.cpp  InputCode.hpp  InputDevice.hpp  InputManager.cpp  InputManager.hpp  InputManager2.cpp  InputManager2.hpp  InputManagerImpl.cpp  InputManagerImpl.hpp  InputState.cpp  InputState.hpp  InputStatus.cpp  InputStatus.hpp  KeyCode.hpp  KeyStatus.hpp  KeyStroke.hpp  Keyboard.hpp  KeyboardStatus.cpp  KeyboardStatus.hpp  Mouse.hpp
src/xe/xe/io/: Archive.cpp  Archive.hpp  FileStream.hpp  IosStream.cpp  IosStream.hpp  MemoryStream.hpp  Stream.hpp
src/xe/xe/math/: Array.hpp  Boundary.hpp  Generators.cpp  IntersectInfo.hpp  Math.hpp  Matrix.hpp  Plane.hpp  PlaneGenerator.hpp  Quaternion.hpp  Ray.hpp  Sphere.hpp  SphereGenerator.cpp  SphereGenerator.hpp  Vector.hpp
src/xe/xe/sfx/: BufferDesc.cpp  BufferDesc.hpp  Device.cpp  Device.hpp  Listener.cpp  Listener.hpp  SoundContext.cpp  SoundContext.hpp  SoundDevice.cpp  SoundDevice.hpp  SoundManager.hpp  Source.cpp  Source.hpp  SourceDesc.hpp
src/xe/xe/sg/: AssetsLibrary.cpp  AssetsLibrary.hpp  Box.hpp  Camera.hpp  Forward.hpp  Generator.cpp  Generator.hpp  Generators.hpp  GenericScene.cpp  GenericScene.hpp  GenericSceneManager.cpp  GenericSceneManager.hpp  GenericSceneNode.cpp  GenericSceneNode.hpp  Geometry.hpp  Intersect.hpp  IntersectInfo.hpp  Light.cpp  Light.hpp  Mesh.cpp  Mesh.hpp  Pipeline.cpp  Pipeline.hpp  Pipeline2.cpp  Pipeline2.hpp  Pipeline2Base.cpp  Pipeline2Base.hpp  Pipeline2Rasterizer.cpp  Pipeline2Rasterizer.hpp  Plane.hpp  PlaneGenerator.cpp  PlaneGenerator.hpp  Ray.hpp  Renderable.cpp  Renderable.hpp  Renderer.cpp  Renderer.hpp  Scene.cpp  Scene.hpp  SceneImpl.cpp  (+19 more)
src/xe/xe/sys/: Forward.hpp  Library.cpp  Library.hpp  LibraryPrivate.hpp  LibraryPrivatePosix.cpp  LibraryPrivateWin32.cpp  Plugin.cpp  Plugin.hpp  PluginLibrary.hpp  PluginManager.cpp  PluginManager.hpp
src/xe/xe/tookit/: Renderable.cpp  Renderable.hpp  Scene.cpp  Scene.hpp  SceneImpl.cpp  SceneImpl.hpp  SceneManager.cpp  SceneManager.hpp  SceneNode.cpp  SceneNode.hpp  SceneNodeImpl.cpp  SceneNodeImpl.hpp
(+114 files in other folders)
